Update Heart disease prediction using Logistic Regression.ipynb

--- a/Heart disease prediction using Logistic Regression.ipynb
+++ b/Heart disease prediction using Logistic Regression.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../DATA/heart.csv')"
+    "df = pd.read_csv('heart.csv')"
    ]
   },
   {
